# mclsr_logq

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/train/: mclsr_graph_logq.json  mclsr_graph_logq_lil_userneg.json  mclsr_graph_nologqzero.json  mclsr_logq_1903.json  mclsr_logq_inbatch.json  mclsr_nograph_baseline.json  mclsr_nograph_logq.json  mclsr_nograph_nologqzero.json  mclsr_train_config.json  sasrec_inbatch_l00.json  sasrec_inbatch_logq.json
configs/train/grid/: 01_orig.json  02_logq_downstream.json  03_graph.json  04_graph_logq_lil.json  04_graph_logq_lil_l00.json  04_graph_logq_lil_l025.json  04_graph_logq_lil_l05.json  05_full_baseline.json  06_full_logq_ucic.json  07_full_logq_all.json
notebooks/: AmazonBeautyDatasetStatistics.ipynb  AmazonBookDatasetStatistics.ipynb  AmazonClothingDatasetStatistics.ipynb  AmazonClothingDatasetUserSplit.ipynb  AmazonClothingDatasetUserSplit.nbconvert.ipynb  AmazonSportsDatasetStatistics.ipynb  GowallaDatasetStatistics.ipynb  MovieLens1MDatasetStatistics.ipynb  SteamDatasetPreprocessor.ipynb  Yelp2018DatasetStatistics.ipynb
scripts/: eval_checkpoint.py  generate_item_counts.py  generate_user_counts.py
src/irec/: train.py
src/irec/callbacks/: __init__.py  base.py
src/irec/dataloader/: __init__.py  base.py  batch_processors.py
src/irec/dataset/: __init__.py  base.py  sasrec.py
src/irec/loss/: base.py
src/irec/metric/: __init__.py  base.py
src/irec/models/: __init__.py  base.py  mclsr.py  sasrec.py
src/irec/optimizer/: __init__.py  base.py
src/irec/scheduler/: base.py
(+13 files in other folders)
